Move improvedffmpeg and cleaning up (#40)
* Moving ImprovedFFMpegFunctions to no.lau.ffmpeg

* Moving ImprovedFFMpegFunctions to no.lau.ffmpeg

* Moving ImprovedFFMpegFunctions to no.lau.ffmpeg